--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "description": "A minimal Electron + Vue application",
   "main": "main/main.js",
+  "type": "module",
   "scripts": {
-    "dev": "node scripts/dev-server.js",
-    "build": "node scripts/build.js && electron-builder",
-    "build:win": "node scripts/build.js && electron-builder --win",
-    "build:mac": "node scripts/build.js && electron-builder --mac",
-    "build:linux": "node scripts/build.js && electron-builder --linux"
+    "dev": "node scripts/dev-server.cjs",
+    "build": "node scripts/build.cjs && electron-builder",
+    "build:win": "node scripts/build.cjs && electron-builder --win",
+    "build:mac": "node scripts/build.cjs && electron-builder --mac",
+    "build:linux": "node scripts/build.cjs && electron-builder --linux"
   },
   "repository": "https://github.com/deluze/electron-vue-template",
   "author": {
@@ -16,15 +17,33 @@
     "url": "https://github.com/Deluze"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.4.1",
+    "@mdi/font": "7.4.47",
+    "@vitejs/plugin-vue": "5.2.3",
+    "@vue/eslint-config-prettier": "10.2.0",
+    "@vue/eslint-config-typescript": "14.5.0",
+    "@vue/tsconfig": "^0.1.3",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "electron": "^32.1.2",
     "electron-builder": "^25.1.6",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "eslint": "9.23.0",
+    "eslint-plugin-vue": "10.0.0",
+    "prettier": "3.5.3", 
+    "sass": "1.70.0",
+    "sass-loader": "14.1.0",
+    "typescript": "^5.8.2",
+    "vite": "6.2.3",
+    "vite-plugin-vuetify": "2.1.0",
+    "vue-tsc": "2.2.8"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "@iconify/vue": "4.3.0",
+    "apexcharts": "4.5.0",
+    "vue": "3.5.13",
+    "vue-router": "4.5.0",
+    "vue-tabler-icons": "2.21.0",
+    "vue3-apexcharts": "1.5.2",
+    "vue3-perfect-scrollbar": "1.6.1",
+    "vuetify": "3.7.18"
   }
 }
